Fix FAQ order and vertical alignment

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -784,6 +784,8 @@ $offer-card-padding: 3rem
 
     h3
       text-align: inherit
+      margin: 0
+      padding: 0
 
     button
       background: none
